--- a/version3/templates/index.html
+++ b/version3/templates/index.html
@@ -59,15 +59,17 @@
                                     <span class="badge bg-primary">Selected</span> cells are used for commentary generation.
                                     Click on cells to select or deselect them.
                                 </div>
-                                <div class="table-responsive">
-                                    <table id="summaryTable" class="table table-striped table-hover rounded">
-                                        <thead>
-                                            <!-- Table headers will be populated by JavaScript -->
-                                        </thead>
-                                        <tbody>
-                                            <!-- Table body will be populated by JavaScript -->
-                                        </tbody>
-                                    </table>
+                                <div class="table-container">
+                                    <div class="table-responsive">
+                                        <table id="summaryTable" class="table table-striped table-hover rounded">
+                                            <thead>
+                                                <!-- Table headers will be populated by JavaScript -->
+                                            </thead>
+                                            <tbody>
+                                                <!-- Table body will be populated by JavaScript -->
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                                 <!-- Settings and Action Buttons -->
                                 <div class="mt-4">
